added canvas resizing

--- a/First Project/index.html
+++ b/First Project/index.html
@@ -7,7 +7,7 @@
     <link href="/dist/main.css" rel="stylesheet" />
   </head>
   <body class="m-0 antialiased">
-    <div id="app">
+    <div id="app" class="w-full h-full block">
       <div
         class="absolute text-white text-center"
         style="top: 50%; transform: translate(-50%, -50%); left: 50%"
