--- a/First Project/index.html
+++ b/First Project/index.html
@@ -12,10 +12,12 @@
         class="absolute text-white text-center"
         style="top: 50%; transform: translate(-50%, -50%); left: 50%"
       >
-        <h1 class="font-space-mono text-xl uppercase tracking-wide">Niklas Fulle</h1>
-        <p class="font-exo text-4xl">ONE WITH AN EVERLASTING DESIRE FOR THE UNKNOWN & UNTOLD</p>
+        <h1 class="font-space-mono text-2xl uppercase tracking-wide">Niklas Fulle</h1>
+        <p class="font-exo text-5xl">MY LITTLE TEST</p>
         <a
           class="border px-4 py-2 rounded-lg text-sm font-space-mono uppercase mt-8 hover:bg-white hover:text-gray-800 inline-block hover:cursor-pointer"
+          href="https://github.com/niklasfulle"
+          target="_blank"
           >View Work</a
         >
       </div>
