added backgound change

--- a/Seconde Project/index.html
+++ b/Seconde Project/index.html
@@ -6,7 +6,7 @@
     <title>Earth</title>
     <link href="/dist/main.css" rel="stylesheet" />
   </head>
-  <body class="m-0 bg-black">
+  <body class="m-0 bg-slate-900">
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
