some test for placement

--- a/Seconde Project/index.html
+++ b/Seconde Project/index.html
@@ -6,8 +6,11 @@
     <title>Earth</title>
     <link href="/dist/main.css" rel="stylesheet" />
   </head>
-  <body class="m-0 bg-slate-900">
-    <div id="app"></div>
+  <body class="m-0 bg-slate-900 h-full flex flex-end flex-row justify-end mt-3">
+    <div>
+      <div id="app"></div>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
